Fix unnecessary scrollbar in mailbox view
Fixes RM-13843

--- a/axelor-web/src/main/webapp/css/view.mail.css
+++ b/axelor-web/src/main/webapp/css/view.mail.css
@@ -18,8 +18,9 @@
 /* thread view */
 
 .mail-thread-view {
+  width: inherit !important;
   max-width: 720px;
-  margin: 0 4px 0 !important;
+  margin: 0 16px 0 4px !important;
   padding: 0;
 }
 
